internal/xds/translator/testdata/out/xds-ir/http-route-with-clientcert.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-btls/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-btls/http/*
    routes:
    - match:
        path: /exact
      name: httproute/envoy-gateway/httproute-btls/rule/0/match/0/*
      route:
        cluster: httproute/envoy-gateway/httproute-btls/rule/0
        upgradeConfigs:
        - upgradeType: websocket
